syntax = "proto3";
package LidarData;

message LidarData {
  float home_x = 1;
  float home_y = 2;
  repeated float lidar_data_x_history = 3;
  repeated float lidar_data_y_history = 4;
}
